GNU SASL LIBRARY NEWS -- History of user-visible changes.
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
See the end for copying conditions.

* Version 1.1 (unreleased)

** API and ABI modifications.
No changes since last version.

* Version 1.0 (released 2009-01-23)

** Fix several compiler warnings.

** Update gnulib files.

** API and ABI modifications.
No changes since last version.

* Version 0.2.29 (released 2008-10-21)

** DIGEST-MD5 server: Added callback to retrieve hashed secret.
The callback is GSASL_DIGEST_MD5_HASHED_PASSWORD.  Patch from "Gazsó
Attila" <agazso@gmail.com>.

** DIGEST-MD5 server: Convert realm from ISO 8859-1 to UTF-8 when needed.
Reported by Adam Goode <adam@spicenitz.org>.

** libgsasl: Add function to print name of error codes.
For example, gsasl_strerror_name(GSASL_OK) returns "GSASL_OK".

** libgsasl: Reduce complexity of gsasl_strerror.

** libgsasl: Obsolete base64 functions rewritten to use new functions.
The old functions are gsasl_base64_encode and gsasl_base64_decode.
This reduces size of the library somewhat.

** Make the library compile under MinGW again.

** Added Indonesian translation.
Thanks to Andhika Padmawan <andhika.padmawan@gmail.com>.

** Perl is no longer required to build Libgsasl in Visual Studio.

** Fix several compiler warnings.

** API and ABI modifications.
gsasl_strerror_name: ADDED

* Version 0.2.28 (released 2008-08-20)

** New function to get mechanism name used in current session.
The function is gsasl_mechanism_name.

** The library can be built using Visual Studio.
Patches provided by Adam Strzelecki <ono@java.pl>.  See the manual,
section 'Installing under Windows', for more information.

** Update gnulib files.
Under Windows, the randomness functions will now prefer the Intel RND
crypto provider.  CryptAcquireContext is now invoked with the
CRYPT_VERIFY_CONTEXT parameter.

** API and ABI modifications.
gsasl_mechanism_name: ADD.

* Version 0.2.27 (released 2008-07-01)
